src/tests/parse_errors/004.ura
// parse_errors/004 — unknown character in source
use "@/header"

main():
    a int = 5 # 1